--- a/src/app.scss
+++ b/src/app.scss
@@ -74,6 +74,24 @@ body{
         @include socialBtns();
     }
 }
+.tokenomics{
+    h2, h4, h6{
+        font-weight: 700;
+    }
+    background-color: $clr-secondary;
+    .container{
+        background-image: url('./media/bg-banner.png');
+        background-position: bottom;
+        background-repeat: no-repeat;
+    }
+    .columns{
+        border-radius: 20px;
+        transition: all 0.3s ease;
+        &:hover{
+            background-color: #F2702240;
+        }
+    }
+}
 footer{
     hr{
         border-color: $clr-secondary;
