--- a/src/app.scss
+++ b/src/app.scss
@@ -92,6 +92,57 @@ body{
         }
     }
 }
+.documents{
+    background-color: $clr-secondary;
+    .container{
+        background-color: #000;
+        border-radius: 20px;
+    }
+    .checks{
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 6rem;
+        row-gap: 1rem;
+        align-items: center;
+        font-weight: 700;
+        font-size: 1.2rem;
+        .check{
+            background-color: $clr-primary;
+            border-radius: 50%;
+            padding: 10px;
+            color: #000;
+            margin-right: 1rem;
+        }
+    }
+    .dropdown-container{
+        position: relative;
+        text-align: center;
+        width: 200px;
+        height: 60px ;
+        .dropdown-text{
+            background-color: $clr-primary;
+            padding: 1rem;
+            border-radius: 50px;
+            transition: all 0.2s linear;
+        }
+        cursor: pointer;
+        &:hover{
+            .dropdown-text{border-radius: 50px 50px 0 0;}
+            .dropdowns{
+                display: block;
+            }
+        }
+        .dropdowns{
+            display: none;
+            position: absolute;
+            background-color: $clr-primary;
+            top: 3.5rem;
+            left: 0;
+            right: 0;
+            text-align: center;
+        }
+    }
+}
 footer{
     hr{
         border-color: $clr-secondary;
