--- a/src/app.scss
+++ b/src/app.scss
@@ -52,6 +52,7 @@ ul{
         color: #fff;
         font-size: 0.9rem;
         font-weight: bold;
+        cursor: pointer;
         &:hover{
             color: $clr-secondary;
         }
