--- a/src/app.scss
+++ b/src/app.scss
@@ -289,13 +289,17 @@ footer{
     margin-right: 1rem;
     border-bottom: 2px solid white;
 }
-.scroll-top{
+.scroll-to-top{
     background-color: $clr-primary;
+    height: 50px;
     box-shadow: none;
+    transition: all 0.5s ease;
+    right: 1rem;
+    bottom: 1rem;
+    svg{
+        fill: #fff;
+    }
     &:hover{
-        background-color: $clr-dark;
-        svg{
-            fill: #fff;
-        }
+        background-color: rgb(54, 44, 44);
     }
 }
