--- a/src/app.scss
+++ b/src/app.scss
@@ -290,12 +290,12 @@ footer{
     border-bottom: 2px solid white;
 }
 .scroll-to-top{
-    background-color: $clr-primary;
-    height: 50px;
-    box-shadow: none;
+    background-color: $clr-primary !important;
+    height: 50px !important;
+    box-shadow: none !important;
     transition: all 0.5s ease;
-    right: 1rem;
-    bottom: 1rem;
+    right: 1rem !important;
+    bottom: 1rem !important;
     svg{
         fill: #fff;
     }
